<resources>
    <string name="app_name">Sport It</string>

    <!--Category name for myEvents -->
    <string name="category_myEvents">My Events</string>

    <!--Category name for View All Events -->
    <string name="category_viewAll">All Events</string>

    <!--Category name for Attending -->
    <string name="category_attending">Attending</string>

    <!--Category name for Create Event -->
    <string name="category_createEvent">Create Event</string>

    <!--Label for Create Event -->
    <string name="label_eventName">Event Name</string>

    <!--Label for Date -->
    <string name="label_eventDate">Event Date</string>

    <!--Label for Time -->
    <string name="label_eventTime">Event Time</string>

    <!--Label for Place -->
    <string name="label_eventPlace">Event Place</string>

    <!--Label for Players Required -->
    <string name="label_playersRequired">Players Required</string>

    <!--Label for Players Attending -->
    <string name="label_playersAttending">Players Attending</string>

    <!-- Label for editor menu option to save event -->
    <string name="action_save">Save</string>

    <!-- Label for editor menu option to edit event -->
    <string name="action_edit">Edit</string>

    <!-- Label for editor menu option to delete event -->
    <string name="action_delete">Delete</string>

    <!-- Label for editor menu option to delete event -->
    <string name="search_title">Search...</string>

    <string name="event_category">Event Type</string>

    <!-- Label for event sport option to select event -->
    <string-array name="sports_array">
        <item>Cricket</item>
        <item>Football</item>
        <item>Tennis</item>
        <item>Badminton</item>
        <item>Rugby</item>
        <item>Basketball</item>
        <item>Volleyball</item>
        <item>Baseball</item>
    </string-array>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes-->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current event-->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog button text for the option to confirm deleting the current event -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current event -->
    <string name="cancel">Cancel</string>

    <!-- Dialog message to ask the user to confirm deleting the current event -->
    <string name="delete_dialog_msg">Delete this event?</string>

</resources>
